2019-1/231/users/4339/executions/1651_2703.log
== TEST (2019-04-09 18:49:00) 
-- CODE:
idade= int(input("idade"))

if (idade > 18):
   pode_votar= "eleitor"

else
     poder_votar= "nao_eleitor"
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:21) 
-- CODE:

idade= int(input("ida"))

if (idade > 18):
   pode_votar= "eleitor"

else
     poder_votar= "nao_eleitor"
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:36) 
-- CODE:

idade= int(input("ida"))

if (idade > 18):
   pode_votar= "eleitor"

else:
    poder_votar= "nao_eleitor"
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:24) 
-- CODE:

idade= int(input("ida"))

if (idade > 18):
   pode_votar= "eleitor"

else:
    poder_votar= "nao_eleitor"
print(pode_votar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(pode_votar)
NameError: name 'pode_votar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:52:33) 
-- CODE:

idade= int(input("ida"))

if (idade > 18):
   pode_votar= "eleitor"

else:
    poder_votar= "nao_eleitor"
print(pode_votar)
-- EXECUTION TIME:
0.137336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/2703/main.py", line 9, in <module>
    print(pode_votar)
NameError: name 'pode_votar' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:05) 
-- CODE:

idade= int(input("ida"))

if (idade < 18):
   pode_votar= "eleitor"

else:
    poder_votar= "nao_eleitor"
print(pode_votar)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:32) 
-- CODE:

idade= int(input("ida"))

if (idade < 18):
   pode_votar= "eleitor"

else:
    pode_votar= "nao_eleitor"
print(pode_votar)
-- EXECUTION TIME:
0.303365
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
idanao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
idanao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:35) 
-- CODE:

idade= int(input("ida"))

if (idade < 18):
   pode_votar= "eleitor"

else:
    pode_votar= "nao_eleitor"
print(pode_votar)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:54) 
-- CODE:

idade= int(input("ida"))

if (idade > 18):
   pode_votar= "eleitor"

else:
    pode_votar= "nao_eleitor"
print(pode_votar)
-- EXECUTION TIME:
0.192716
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
